# Facial-Authentication

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: plan-experiment.md  prepare-dataset.md  run-eval.md  run-train.md  summarize-result.md
.claude/skills/analysis-reporting/: SKILL.md
.claude/skills/dataframe-polars/: SKILL.md
.claude/skills/safe-data-handling/: SKILL.md
.claude/skills/sql-analysis/: SKILL.md
docs/agent/: agent-behavior.md  analysis-workflow.md  data-catalog.md  metrics-and-definitions.md  project-overview.md  reporting-guidelines.md  repository-structure.md  security-and-privacy.md  statistical-and-ml-guidelines.md  validation-and-testing.md
docs/todo/: setup-and-experiment-todo.md
scripts/: check_cuda.py  check_no_raw_data_commit.py  check_no_sensitive_patterns.py  run_eda_titanic.py  validate_agent_docs.py
